<resources>
    <string name="app_name">Vault Android SDK</string>
    <string name="get_public_key">Get Public Key</string>
    <string name="decrypt_file">Decrypt File</string>
    <string name="play">Play</string>
    <string name="save_otp">Save OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="email_address">Email Address:</string>
    <string name="get_nfts">Get NFTs</string>
</resources>