<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <Button
        android:id="@+id/getPublicKeyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_public_key"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/getPublicKeyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/getPublicKeyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/decryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/trackInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/decryptFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/emailAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/trackInfo"
        android:text="@string/email_address" />

    <EditText
        android:id="@+id/emailAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/emailAddressLabel"/>

    <Button
        android:id="@+id/getNftsInSocialWalletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_nfts"
        app:layout_constraintTop_toBottomOf="@id/emailAddressInput"
        app:layout_constraintStart_toStartOf="@id/emailAddressInput"/>

    <TextView
        android:id="@+id/socialWalletNftsDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/getNftsInSocialWalletButton" />

    <EditText
        android:id="@+id/otpInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/socialWalletNftsDisplay"/>

    <Button
        android:id="@+id/getOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_otp"
        app:layout_constraintTop_toBottomOf="@id/otpInput"
        app:layout_constraintStart_toStartOf="@id/otpInput"/>

    <Button
        android:id="@+id/saveOtpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_otp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/otpInput"
        app:layout_constraintStart_toEndOf="@id/getOtpButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>